# todo-tauri

./: .env  README.md  about.html  build.sh  components.json  index.html  package-lock.json  package.json  tailwind.config.js  timer.html  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: App.css  App.tsx  TimerApp.tsx  main.tsx  style.css  timer.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  timer.json
src-tauri/src/: commands.rs  lib.rs  menu.rs  timer.rs  types.rs  window.rs
src/components/: AddTodoDialog.tsx  FancyEmailComposer.tsx  TodoCard.tsx  UpdateChecker.tsx
src/lib/: supabase.ts  todoService.ts
src/services/: todoService.ts
src/types/: todo.ts
